<resources>
    <string name="app_name" translatable="false">Andromeda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="ch_nh_s_ng_t_i">Chỉnh sáng tối </string>
    <string name="ng_n_ng">Ngôn ngữ</string>
    <string name="englist">Tiếng Anh</string>
    <string name="ti_ng_vi_t">Tiếng Việt</string>
    <string name="h_ng_d_n_s_d_ng">Hướng dẫn sử dụng</string>
    <string name="phim_n_i_b_t">Phim nổi bật</string>
    <string name="ki_m_tra_l_i">Tóm tắt phim</string>
    <string name="t_p">Tập</string>
    <string name="phim_desc">Phim Desc</string>
    <string name="di_n_vi_n">Diễn viên</string>
    <string name="b_nh_lu_n">Bình Luận</string>
    <string name="forrum_text">Bạn cần đăng nhập để có thể bình luận</string>
    <string name="NotLoggin_Loginfailed">Đăng Nhập Thất Bại.</string>
    <string name="forumfrag_sendd">Bạn cần đăng nhập để thực hiện chức năng này</string>
    <string name="text_search">Tìm Kiếm</string>
    <string name="text_dien_dan">Diễn Đàn</string>
    <string name="text_yeu_thich">Ưa thích</string>
    <string name="text_cai_dat">Cài Đặt</string>
    <string name="text_ho_so">Hồ sơ</string>
    <string name="kh_ng_t_m_th_y_film">Không Tìm Thấy Film.</string>
    <string name="phi_n_b_n_1_0_0">Phiên Bản 1.0.0</string>
    <string name="kh_ng_c_k_t_n_i_m_ng">không có kết nối mạng</string>
    <string name="text_huong_dan">Sau khi tải ứng dụng hãy xem những bộ phim mà mình thích, chức năng đăng nhập
    hãy dùng tài khoản google sau khi đăng nhập bạn sẽ thấy 2 chức năng là "Mục ưa thích" và "Đăng xuất",
    sau khi đăng nhập bạn còn có thể bình luận trên diễn đàn, chức năng tìm kiếm dùng để tìm kiếm các bộ phim mà bạn
    muốn xem, thay mặt những người tạo lên app xin trân thành cảm ơn các bạn vì đã dùng app của chúng tôi</string>
    <string name="ng_nh_p_andromeda_c_nh_ng_tr_i_nghi_m_t_t_nh_t">Đăng nhập Andromeda để có những trải nghiệm tốt nhất.</string>
    <string name="xem_n_i_dung_nh_ng_video_y_u_th_ch_c_a_b_n">Xem nội dung, những video yêu thích của bạn.</string>
    <string name="m_c_a_th_ch">Mục Ưa Thích</string>
    <string name="ng_xu_t">Đăng Xuất</string>
    <string name="t_n_ng_i_d_ng">Tên người dùng</string>
    <string name="text_detai">Bạn phải đăng nhập để thực hện chức năng này</string>
    <string name="text_da_thich">Đã thêm vào Yêu thích</string>
    <string name="text_bo_like">Đã bỏ khỏi Yêu thích</string>
    <string name="h_y_ng_nh_p_s_d_ng_ch_c_n_ng_n_y">Hãy đăng nhập để sử dụng chức năng này</string>
    <string name="text_xoa_binh_luan">Xoá bình luận</string>
    <string name="text_chac_chan">Bạn có chắc chắn xoá bình luận này?</string>
    <string name="text_xoa">Xoá</string>
    <string name="text_huy">Huỷ</string>
    <string name="ch_a_c_film_m_i">Chưa Có Film Mới.</string>


</resources>