<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  style="@style/SCREN"

    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:backgroundTint="#BEBEBE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="15dp"
            android:background="@drawable/solid"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/idchinhsangtoi"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ch_nh_s_ng_t_i"
                android:layout_weight="1"


                />
            <Switch
                android:id="@+id/switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="1dp"
            android:backgroundTint="#BEBEBE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/solid"
            android:padding="10dp">
            <TextView
                android:id="@+id/ngonngu"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ng_n_ng"/>


            <RadioGroup
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/tienganh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/englist"
                    android:layout_weight="1"
                    android:textColor="@color/black"/>
                <RadioButton
                    android:id="@+id/tiengviet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ti_ng_vi_t"
                    android:layout_weight="1"
                    android:textColor="@color/black"/>
            </RadioGroup>
        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/solid"
         android:layout_marginTop="1dp"
         android:backgroundTint="#BEBEBE"
         android:padding="15dp">
         <TextView

             android:textColor="@color/black"
             android:id="@+id/huongdan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/h_ng_d_n_s_d_ng"/>
     </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/solid"
            android:layout_marginTop="1dp"
            android:backgroundTint="#BEBEBE"
            android:padding="15dp">
            <TextView
                android:id="@+id/phienban"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phi_n_b_n_1_0_0"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>