<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:layout_width="match_parent"
        app:titleTextColor="@color/white"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".DetailsActivity">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="84dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/thumb"
                    android:layout_width="125dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="184dp"
                    android:transitionName="imageMain"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/title_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/thumb"
                    app:layout_constraintTop_toBottomOf="@+id/cover" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="88dp"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="@+id/cover"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/cover"
                    app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
<!--            <ImageButton-->
<!--                android:id="@+id/image_favorite"-->
<!--                android:layout_width="32dp"-->
<!--                android:layout_height="32dp"-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:background="@android:color/transparent"-->
<!--                android:src="@drawable/ic_baseline_favorite_24_red"/>-->

            <ToggleButton
                android:id="@+id/toggle_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:textOff=""
                android:textOn=""
                android:background="@drawable/toggle_fav_button"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:background="@color/color_bg_blue"
                android:text="@string/t_p"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="24dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_parts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:text="@string/phim_desc"
                android:textSize="16dp"
                android:lineSpacingExtra="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:background="@color/color_bg_blue"
                android:text="@string/di_n_vi_n"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="24dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_casts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                />


        </LinearLayout>
    </ScrollView>



</LinearLayout>


